# api/conversions.go
@@ -44,6 +44,11 @@ func (game *Game) FromDb(dbGame db.Game) {
 	game.UpdatedAt = dbGame.UpdatedAt
 }
 
+func (gameDetails *GameDetail) FromDb(dbGame db.GameGetByIdWithOrganizerRow) {
+	gameDetails.Game.FromDb(dbGame.Game)
+	gameDetails.Organizer.FromDb(dbGame.User)
+}
+
 func (user *User) FromDb(dbUser db.User) {
 	user.Id = strconv.FormatInt(dbUser.ID, 10)
 	user.Email = openapi_types.Email(dbUser.Email)
